kubernetes/openarchiver/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: openarchiver
  namespace: openarchiver

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openarchiver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openarchiver
    spec:
      containers:
      - name: openarchiver
        image: docker.io/logiclabshq/open-archiver:v0.6.0@sha256:3c240bf852d604b73a5229c0a22e2e69987e8e9cfe7241710598ca6187c08b83
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: web
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: web
          initialDelaySeconds: 60
          periodSeconds: 30
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /var/data/open-archiver
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: openarchiver-data
