kubernetes/openarchiver/meilisearch-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: openarchiver-meilisearch
  namespace: openarchiver

spec:
  serviceName: openarchiver-meilisearch
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openarchiver-meilisearch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openarchiver-meilisearch
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: meilisearch
        image: docker.io/getmeili/meilisearch:v1.54.0@sha256:0bf32debcbfa8ba4e418679025f4935884972171513c92f0584689ff994a61df
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7700
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /meili_data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOncePod
      resources:
        requests:
          storage: 10Gi
