kubernetes/openarchiver/patch-valkey-secret-mount.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: valkey

spec:
  template:
    spec:
      volumes:
      - name: extravalkeyconfigs-volume
        secret:
          secretName: openarchiver-valkey-config
          items:
          - key: auth.conf
            path: auth.conf
