kubernetes/openarchiver/meilisearch-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: openarchiver-meilisearch
  namespace: openarchiver

spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: openarchiver-meilisearch
  ports:
  - name: http
    port: 7700
    targetPort: http
