kubernetes/openarchiver/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: openarchiver
  namespace: openarchiver

spec:
  selector:
    app.kubernetes.io/name: openarchiver
  ports:
  - name: http
    port: 80
    targetPort: web
