kubernetes/openarchiver/tika-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: openarchiver-tika
  namespace: openarchiver

spec:
  selector:
    app.kubernetes.io/name: openarchiver-tika
  ports:
  - name: http
    port: 9998
    targetPort: http
