kubernetes/openarchiver/valkey-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: openarchiver-valkey
  namespace: openarchiver

spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: openarchiver-valkey
  ports:
  - name: redis
    port: 6379
    targetPort: redis
