kubernetes/openarchiver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: openarchiver
  namespace: openarchiver
  annotations:
    cert-manager.io/cluster-issuer: zerossl
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: OpenArchiver
    gethomepage.dev/description: Archive Browser
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-email-search

spec:
  tls:
  - hosts:
    - openarchiver.k.oneill.net
    secretName: openarchiver-tls
  rules:
  - host: openarchiver.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openarchiver
            port:
              name: http
